[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
colored = "2.1.0"
const_format = "0.2.33"
crossterm = "0.28.1"
tokio = { version = "1", features = ["full"] }

# Additional recommended dependencies
itertools = "0.13.0"
log = "0.4.22"
ndarray = "0.16.1"
rand = "0.8.5"
regex = "1.11.1"
simple-logging = "2.0.2"
async-trait = "0.1.83"
